--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee e Magalu. Links de afiliado seguros e atualizados.">
-    <meta property="og:title" content="Centro de Compra - Ofertas e Descontos">
+    <meta property="og:title" content="Centro de Compras - Ofertas e Descontos">
     <meta property="og:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee e Magalu. Links de afiliados seguros e atualizados!">
     <meta property="og:image" content="https://placehold.co/1200x630/3483fa/ffffff?text=Centro+de+Compras">
     <meta property="og:url" content="https://centrodecompra.com.br/">
     <meta name="twitter:card" content="summary_large_image">
-    <title>Centro de Compra - Ofertas do Dia</title>
+    <title>Centro de Compras - Ofertas do Dia</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -215,31 +215,31 @@
                     </div>
                     <div class="store-card amazon" data-loja="amazon" onclick="filtrarPorLoja('amazon')">
                         <div class="store-logo">
-                            <img src="https://placehold.co/80x30/ff9900/ffffff?text=Amazon" alt="Amazon">
+                            <img src="logos/amazon.png" alt="Amazon">
                         </div>
                         <span class="store-name">Amazon</span>
                     </div>
                     <div class="store-card mercadolivre" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')">
                         <div class="store-logo">
-                            <img src="https://placehold.co/80x30/ffe600/333333?text=Mercado+Livre" alt="Mercado Livre">
+                            <img src="logos/mercadolivre.jpg" alt="Mercado Livre">
                         </div>
                         <span class="store-name">Mercado Livre</span>
                     </div>
                     <div class="store-card shopee" data-loja="shopee" onclick="filtrarPorLoja('shopee')">
                         <div class="store-logo">
-                            <img src="https://placehold.co/80x30/ee4d2d/ffffff?text=Shopee" alt="Shopee">
+                            <img src="logos/shopee.png" alt="Shopee">
                         </div>
                         <span class="store-name">Shopee</span>
                     </div>
                     <div class="store-card magalu" data-loja="magalu" onclick="filtrarPorLoja('magalu')">
                         <div class="store-logo">
-                            <img src="https://placehold.co/80x30/0066cc/ffffff?text=Magalu" alt="Magalu">
+                            <img src="logos/magalu.png" alt="Magalu">
                         </div>
                         <span class="store-name">Magalu</span>
                     </div>
                     <div class="store-card shein" data-loja="shein" onclick="filtrarPorLoja('shein')">
                         <div class="store-logo">
-                            <img src="https://placehold.co/80x30/000000/ffffff?text=SHEIN" alt="Shein">
+                            <img src="logos/shein.png" alt="Shein">
                         </div>
                         <span class="store-name">SHEIN</span>
                     </div>
@@ -386,7 +386,7 @@
                     <p><i class="fas fa-info-circle"></i> Este site contém links de afiliados. Ao comprar através dos nossos links, você nos ajuda a manter o site funcionando sem custo adicional para você.</p>
                 </div>
                 <div class="footer-copyright">
-                    <p>&copy; <span id="year"></span> Centro de Compra. Todos os direitos reservados.</p>
+                    <p>&copy; <span id="year"></span> Centro de Compras. Todos os direitos reservados.</p>
                 </div>
             </div>
         </div>
