--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee e Magalu. Links de afiliado seguros e atualizados.">
-    <meta property="og:title" content="Centro de Compras - Ofertas e Descontos">
+    <meta property="og:title" content="Centro de Compra - Ofertas e Descontos">
     <meta property="og:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee e Magalu. Links de afiliados seguros e atualizados!">
     <meta property="og:image" content="https://placehold.co/1200x630/3483fa/ffffff?text=Centro+de+Compras">
     <meta property="og:url" content="https://centrodecompra.com.br/">
     <meta name="twitter:card" content="summary_large_image">
-    <title>Centro de Compras - Ofertas do Dia</title>
+    <title>Centro de Compra - Ofertas do Dia</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -342,7 +342,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h4>Centro de Compras</h4>
+                    <h4>Centro de Compra</h4>
                     <p>Sua plataforma de ofertas e descontos nas melhores lojas online do Brasil.</p>
                     <div class="social-links">
                         <a href="https://www.instagram.com/cdccentrodecompras/" target="_blank" class="social-link instagram">
