--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <div class="header-top">
       <div class="container">
         <div class="header-info">
-          <span><i class="fas fa-phone-alt"></i> (11) 99999-9999</span>
+          <span><i class="fas fa-phone-alt"></i> (21)9999-9999</span>
           <span><i class="fas fa-envelope"></i> contato@centrodecompras.com</span>
         </div>
         <div class="header-links">
-          <a href="#" class="header-link">Ajuda</a>
-          <a href="#" class="header-link">Minha Conta</a>
+          <a href="#" class="header-link"></a>
+          <a href="#" class="header-link">Cupons</a>
         </div>
       </div>
     </div>
